--- a/.ideavimrc
+++ b/.ideavimrc
@@ -4,7 +4,7 @@ let mapleader = " "
 
 set scrolloff=3  " 3 lines above/below cursor when scrolling
 set incsearch hlsearch
-set relativenumber
+"set relativenumber
 set visualbell
 set noerrorbells
 set surround
