--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -108,12 +108,6 @@ interval=10
 #instance=1
 #interval=30
 
-# Date Time
-#
-[time]
-command=date '+%Y-%m-%d %H:%M'
-interval=5
-color=#00FF00
 
 # Generic media player support
 #
@@ -127,17 +121,33 @@ signal=10
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
+[openvpn]
+interval=20
 
 # Temperature
 #
 # Support multiple chips, though lm-sensors.
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
+[temperature]
+label=CPU
+interval=10
+command=/usr/share/i3blocks/temperature --chip coretemp-isa-0000 -w 60 -c 80
+[temperature]
+label=GPU
+interval=10
+command=/usr/share/i3blocks/temperature --chip radeon-pci-0100 -w 60 -c 80
+[temperature]
+label=MB
+interval=10
+command=/usr/share/i3blocks/temperature --chip acpitz-acpi-0 -w 60 -c 80
+
+# Date Time
+#
+[time]
+command=date '+%Y-%m-%d %H:%M'
+interval=5
+color=#00FF00
 
 # AUR package: xkb-switch-git
 [layout]
